syntax = "proto3";

package netcoreprotobuf.proto.definitions;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "NetCoreProtobuf.Proto.Generated";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
  repeated PhoneNumber phones = 4;
  google.protobuf.Timestamp last_updated = 5;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}

enum PhoneType {
  UNSPECIFIED = 0;
  MOBILE = 1;
  HOME = 2;
  WORK = 3;
}
